--- a/src/components/analyze/aq-analyze-home.html
+++ b/src/components/analyze/aq-analyze-home.html
@@ -294,6 +294,7 @@
         				delete this.checkedItems[deleteId];
         				this.fire('iron-signal',{name:'backtest-deleted'});
         				this.dirtyBit = 1;
+        				break;
         			}
         		}
 	        },
