--- a/src/components/editor/aq-editor-edit.html
+++ b/src/components/editor/aq-editor-edit.html
@@ -492,10 +492,13 @@
 
           // Send Execution request via web-sockets 
           this.isRunning  = true;
+          this.selectedSidebar = 1;
+          
           this.fire('execute-backtest', {backtestId:this.activeBacktestId});
 
           this.fire('iron-signal',{name:'backtest-added'});
-        
+          
+
         },
 
         onStrategyExecutionError: function(data) {
